--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/charactersSearchFragment">
+
+    <fragment
+        android:id="@+id/charactersSearchFragment"
+        android:name="com.example.amazingAppsTestTask.ui.CharactersSearchFragment"
+        android:label="fragment_character_search"
+        tools:layout="@layout/fragment_character_search" >
+        <action
+            android:id="@+id/action_charactersSearchFragment_to_favoriteCharactersFragment"
+            app:destination="@id/favoriteCharactersFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/favoriteCharactersFragment"
+        android:name="com.example.amazingAppsTestTask.ui.FavoriteCharactersFragment"
+        android:label="fragment_favorite_characters"
+        tools:layout="@layout/fragment_favorite_characters" />
+
+    <fragment
+        android:id="@+id/characterDetailsFragment"
+        android:name="com.example.amazingAppsTestTask.ui.CharacterDetailsFragment"
+        android:label="character_details_fragment"
+        tools:layout="@layout/character_details_fragment" />
 
 </navigation>
