feat: setup basic app behavior

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,18 +13,37 @@
         <action
             android:id="@+id/action_charactersSearchFragment_to_favoriteCharactersFragment"
             app:destination="@id/favoriteCharactersFragment" />
+        <action
+            android:id="@+id/action_charactersSearchFragment_to_characterDetailsFragment"
+            app:destination="@id/characterDetailsFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/favoriteCharactersFragment"
         android:name="com.example.amazingAppsTestTask.ui.FavoriteCharactersFragment"
         android:label="fragment_favorite_characters"
-        tools:layout="@layout/fragment_favorite_characters" />
+        tools:layout="@layout/fragment_favorite_characters" >
+        <action
+            android:id="@+id/action_favoriteCharactersFragment_to_characterDetailsFragment"
+            app:destination="@id/characterDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/characterDetailsFragment"
         android:name="com.example.amazingAppsTestTask.ui.CharacterDetailsFragment"
         android:label="character_details_fragment"
-        tools:layout="@layout/character_details_fragment" />
+        tools:layout="@layout/fragment_character_details">
+
+        <argument
+            android:name="saved"
+            android:defaultValue="false"
+            app:argType="boolean" />
+
+        <argument
+            android:name="character_id"
+            android:defaultValue="-1"
+            app:argType="integer" />
+
+    </fragment>
 
 </navigation>
