--- a/app/src/main/res/layout/fragment_character_search.xml
+++ b/app/src/main/res/layout/fragment_character_search.xml
@@ -8,6 +8,37 @@
     android:layout_height="match_parent"
     tools:context=".ui.CharactersSearchFragment">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="0dp"
+
+        android:layout_height="56dp"
+
+        android:layout_marginHorizontal="@dimen/default_margin"
+        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:background="@drawable/search_view_background"
+        android:queryHint="@string/search_character_hint"
+
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:id="@+id/divider"
+
+        android:background="?attr/colorOnSurface"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_view"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
@@ -15,11 +46,12 @@
 
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
+        android:layout_marginTop="@dimen/small_margin"
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider"
 
         tools:itemCount="5"
         tools:listitem="@layout/character_item" />
