--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -6,7 +6,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CharacterDetailsFragment"
+    tools:context=".ui.details.CharacterDetailsFragment"
 
     android:background="?attr/colorPrimary">
 
