--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:id="@+id/card"
 
@@ -24,31 +24,44 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="@dimen/default_margin"
-            android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginHorizontal="@dimen/default_margin"
             android:maxLines="1"
-            android:textSize="16sp"
-            android:textStyle="bold"
-
-            app:layout_constraintBottom_toTopOf="@+id/director_label"
+            android:textAppearance="?attr/textAppearanceHeadline6"
 
 
+
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="New Hope" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/film_opening_crawl_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginEnd="@dimen/default_margin"
+            android:maxLines="6"
+            android:textAppearance="?attr/textAppearanceCaption"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/film_title_tv"
+            app:layout_constraintTop_toBottomOf="@id/film_title_tv"
+
+            tools:text="@tools:sample/lorem/random" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/director_label"
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
-            android:layout_marginBottom="@dimen/default_margin"
-            android:layout_marginTop="@dimen/small_margin"
             android:text="@string/director_label"
-            android:textSize="12sp"
+            android:layout_marginTop="@dimen/small_margin"
+            android:textAppearance="?attr/textAppearanceSubtitle2"
 
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/film_title_tv"
-            app:layout_constraintTop_toBottomOf="@+id/film_title_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/film_opening_crawl_tv" />
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
@@ -58,7 +71,7 @@
             android:layout_marginStart="@dimen/extra_small_margin"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="12sp"
+            android:textAppearance="?attr/textAppearanceBody2"
 
             app:layout_constraintStart_toEndOf="@id/director_label"
             app:layout_constraintBottom_toBottomOf="@id/director_label"
@@ -68,17 +81,19 @@
             />
 
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/release_date_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/release_date_label"
 
-            android:layout_marginStart="@dimen/default_margin"
             android:text="@string/release_date_label"
-            android:textSize="12sp"
+            android:layout_marginBottom="@dimen/default_margin"
+            android:layout_marginTop="@dimen/small_margin"
+            android:textAppearance="?attr/textAppearanceSubtitle2"
 
-            app:layout_constraintBottom_toBottomOf="@+id/director_tv"
-            app:layout_constraintStart_toEndOf="@id/director_tv"
-            app:layout_constraintTop_toTopOf="@+id/director_tv" />
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/director_label"
+            app:layout_constraintTop_toBottomOf="@+id/director_label" />
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
@@ -88,7 +103,7 @@
             android:layout_marginStart="@dimen/extra_small_margin"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="12sp"
+            android:textAppearance="?attr/textAppearanceBody2"
 
             app:layout_constraintStart_toEndOf="@id/release_date_label"
             app:layout_constraintBottom_toBottomOf="@id/release_date_label"
