--- a/app/src/main/res/layout/fragment_character_search.xml
+++ b/app/src/main/res/layout/fragment_character_search.xml
@@ -21,39 +21,50 @@
         android:queryHint="@string/search_character_hint"
 
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintBottom_toTopOf="@+id/name_top_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/name_top_divider"
         android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:id="@+id/divider"
+        android:layout_height="@dimen/divider_height"
 
-        android:background="?attr/colorOnSurface"
+        android:background="?attr/colorPrimary"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/search_view"
+        app:layout_constraintStart_toStartOf="@+id/search_view"
+        app:layout_constraintTop_toBottomOf="@id/search_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
 
+        android:layout_marginVertical="@dimen/small_margin"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
-        android:layout_marginTop="@dimen/small_margin"
 
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/name_bottom_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintTop_toBottomOf="@id/name_top_divider"
 
         tools:itemCount="5"
         tools:listitem="@layout/character_item" />
+
+    <View
+        android:id="@+id/name_bottom_divider"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/divider_height"
+
+        android:layout_marginBottom="@dimen/default_margin"
+        android:background="?attr/colorPrimary"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/search_view"
+        app:layout_constraintStart_toStartOf="@+id/search_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
